<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_tracker"
        android:icon="@drawable/ic_baseline_directions_run_24"
        android:title="@string/title_tracker" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_scheduler"
        android:icon="@drawable/ic_baseline_scheduler_24"
        android:title="@string/title_sceduler" />

</menu>