<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.mysport.sportapp.ui.main.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_tracker"
        android:name="com.mysport.sportapp.ui.main.tracker.TrackerFragment"
        android:label="@string/title_tracker"
        tools:layout="@layout/fragment_tracker" >
        <action
            android:id="@+id/action_navigation_tracker_to_cyclingFragment"
            app:destination="@id/cyclingFragment" />
        <action
            android:id="@+id/action_navigation_tracker_to_runningFragment"
            app:destination="@id/runningFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mysport.sportapp.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/cyclingFragment"
        android:name="com.mysport.sportapp.ui.main.tracker.CyclingFragment"
        android:label="fragment_cycling"
        tools:layout="@layout/fragment_cycling" >
        <action
            android:id="@+id/action_cyclingFragment_to_navigation_tracker"
            app:destination="@id/navigation_tracker" />
    </fragment>
    <fragment
        android:id="@+id/runningFragment"
        android:name="com.mysport.sportapp.ui.main.tracker.RunningFragment"
        android:label="fragment_running"
        tools:layout="@layout/fragment_running" >
        <action
            android:id="@+id/action_runningFragment_to_navigation_tracker"
            app:destination="@id/navigation_tracker" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.mysport.sportapp.ui.main.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_navigation_history_to_list_history"
            app:destination="@id/list_history" />
    </fragment>

    <fragment
        android:id="@+id/list_history"
        android:name="com.mysport.sportapp.ui.main.history.ListHistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_listhistory" />

</navigation>